--- a/style.css
+++ b/style.css
@@ -51,16 +51,20 @@ body, html {
 
 
   /*img*/
-#Outline_img {
-  width: 90vw;
-  max-width: 1024px;
-  text-align: center;
-  margin: 0;
-}
-.img_div {
+/* .img_div {
   display: block;
   margin: auto;
   text-align: center;
+  width: 90vw;
+  max-width: 1024px;
+} */
+.youtube {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+.youtube iframe {
+  width: 100%;
+  height: 100%;
 }
 a {
   text-decoration: none;
